# bosgenesis-mop-creation-agent

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  PROJECT_STRUCTURE.md  README.md  SPEC.md  TECH_STACK.md  pyproject.toml
.agents/skills/: SKILL.md  SKILLS.md  SPEC.md
.github/: SPEC.md
.github/workflows/: SPEC.md  ci.yml
artifacts/: SPEC.md
artifacts/agent-guide/: SPEC.md
certs/: README.md  SPEC.md
charts/: SPEC.md
codex/: SPEC.md
config/: SPEC.md  settings.yaml
deploy/: SPEC.md
deploy/k8s/: SPEC.md
docs/: 01_SPEC_MOP_CREATION_AGENT.md  02_HLD_MOP_CREATION_AGENT.md  03_LLD_MOP_CREATION_AGENT.md  04_ALGORITHM_MOP_CREATION_AGENT.md  05_OUTPUT_CONTRACTS.md  06_APPLICATION_MODE.md  07_SAMPLE_MOP_TEMPLATE.md  CONTEXT_SNAPSHOT.md  CREDENTIALS.md  DEPLOYMENT.md  K8S_INSPECTOR_RESOURCE_DETAIL_ENRICHMENT_PLAN.md  RELEASE_CANDIDATE_RUNBOOK.md  SAMPLE_REQUESTS.md  SPEC.md  kubernetes-mop-sample.md
evaluations/: SPEC.md
knowledge-base/: SPEC.md
memory/: SPEC.md
playbook/: SPEC.md  deploy.sh  test-report.ps1  test-report.sh  uninstaller.sh
reports/: SPEC.md
samples/: SPEC.md
skills/: SPEC.md
src/: SPEC.md
tests/: SPEC.md  test_artifact_writer_inventory.py  test_health.py  test_phase10_bounded_reasoning.py  test_phase11_memory_layer.py  test_phase13_observability.py  test_phase15_release_candidate.py  test_phase1_contract.py  test_phase4_mcp_enrichment.py  test_phase5_classification.py  test_phase62_llm_repair.py  test_phase6_reconstruction.py  test_phase7_pdf_renderer.py  test_phase9_qdrant_references.py  test_snapshot_selector.py
(+126 files in other folders)
