[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bosgenesis-mop-creation-agent"
version = "0.1.0"
description = "BOS Genesis MoP Creation Agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "clickhouse-connect>=0.8",
  "azure-identity>=1.17",
  "fastapi>=0.110",
  "langchain-ollama>=0.2",
  "langchain-openai>=0.2",
  "mcp>=1.13",
  "psycopg[binary]>=3.2",
  "pydantic>=2",
  "PyYAML>=6",
  "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "httpx>=0.27",
  "ruff>=0.6",
]

[project.scripts]
bosgenesis-mop-creation-agent = "bosgenesis_mop_creation_agent.entrypoints.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
